# 42SH

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c
src/ast/: Makefile.am  ast.c  ast.h  ast_ass_word.c  ast_case.c  ast_for.c  ast_func.c  ast_if.c  ast_item_case.c  ast_list.c  ast_not.c  ast_operator.c  ast_pipeline.c  ast_redir.c  ast_shell_command.c  ast_simple_command.c  ast_subshell.c  ast_until.c  ast_while.c  list.c  list.h
src/execution/: Makefile.am  exec_ass_word.c  exec_case.c  exec_for.c  exec_func.c  exec_if.c  exec_list.c  exec_not.c  exec_operator.c  exec_pipeline.c  exec_redir.c  exec_shell_cmd.c  exec_simple_cmd.c  exec_until.c  exec_while.c  execution.c  execution.h
src/execution/builtin/: break.c  builtin.h  cd.c  continue.c  dot.c  echo.c  exit.c  export.c  unset.c
src/expansion/: Makefile.am  builtin_variable.c  expand.c  expand.h  expand_backslash.c  expand_double_quote.c  expand_field_split.c  expand_normal.c  expand_parameter.c  expand_parameter_braces.c  expand_parameter_normal.c  expand_single_quote.c  expand_substitution.c  expand_substitution_backtick.c  expand_substitution_parenthesis.c  expansion.c  expansion.h
src/hash_map/: Makefile.am  hash_map.c  hash_map.h
src/io_backend/: Makefile.am  io_backend.c  io_backend.h
src/lexer/: Makefile.am  lexer.c  lexer.h  lexer_backslash.c  lexer_command_sub.c  lexer_dquote.c  lexer_matching_type.c  lexer_param_sub.c  lexer_quoting.c  lexer_rules.c  lexer_utils.c  token.h
src/loop/: Makefile.am  loop.c  loop.h
src/parse_args/: Makefile.am  parse_args.c  parse_args.h
src/parser/: Makefile.am  parse_and_or.c  parse_case.c  parse_cmd.c  parse_compound_list.c  parse_element.c  parse_else_clause.c  parse_for.c  parse_func.c  parse_list.c  parse_pipe.c  parse_prefix.c  parse_redir.c  parse_rule_if.c  parse_shell_cmd.c  parse_simple_cmd.c  parse_until.c  parse_while.c  parser.c  parser.h
src/utils/: Makefile.am  utils.c  utils.h
tests/: testsuite.py
tests/test_python/: testsuite.py
tests/test_shell/: testsuite.sh
tests/test_shell/and_or/: and_or.test  and_or_2.test  basic_and.test  basic_or.test  double_and.test  double_or.test
tests/test_shell/break_continue/: test1.test  test1_con.test  test1_mix.test  test2.test  test3.test  test3_con.test  test3_mix.test  test4.test  test4_con.test  test4_mix.test  test5.test  test5_con.test  test5_mix.test  test6.test  test6_con.test  test6_mix.test  test7.test  test7_con.test
tests/test_shell/case/: case_test_everything.test  for_case_2.test  for_case_basic.test  for_case_expand_in_case.test  for_case_expasion_in_for.test  nested_case.test
tests/test_shell/cd/: basic_1.test  basic_2.test  basic_3.test  error_1.test  error_2.test
tests/test_shell/command_sub/: basic_1.test  basic_2.test  basic_3.test  enclosed_double_quote.test  enclosed_dquote_hard.test
tests/test_shell/comment/: comment_2_lines.test  comment_2_lines_pt2.test  comment_basic.test  comment_quote.test
tests/test_shell/dot/: basic_1.test  basic_3.test  error_1.test  test_1.te
tests/test_shell/double_quotes/: all_quotes_1.test  all_quotes_2.test  all_quotes_3.test  backslash_dollar_command_substitution.test  basic_quote_3.test
tests/test_shell/echo/: echo.test  echo_E.test  echo_EeEennnEE.test  echo_backslash.test  echo_big_args.test  echo_classic.test  echo_dementor.test  echo_dementor3.test  echo_double_simple_quote.test  echo_e.test  echo_eeenee.test  echo_fake_arg.test  echo_n.test  echo_quote_fun.test  testsuite.sh
tests/test_shell/exit/: basic_2.test  basic_3.test  basic_4.test  basic_6.test  basic_7.test  basic_8.test
tests/test_shell/expand_newline/: basic_1.test  basic_2.test  basic_3.test  basic_4.test
tests/test_shell/export/: basic_1.test
tests/test_shell/for/: basic_1.test  basic_2.test  basic_3.test  error_1.test  error_2.test  error_3.test  error_4.test  error_5.test  error_6.test  testsuite.sh
tests/test_shell/function/: basic_1.test  basic_3.test  basic_5.test  basic_6.test  error_1.test  error_2.test
tests/test_shell/if_else/: basic_1.test  basic_2.test  basic_3.test  basic_4.test  dementor_1.test  dementor_2.test  dementor_3.test  elif_else.test  elif_else2.test  else.test  error_1.test  error_2.test  error_3.test  error_4.test  error_5.test  error_6.test  error_7.test  multi_1.test  multi_2.test  multi_3.test  simple_1.test
tests/test_shell/negation/: basic_5.test  basic_6.test
tests/test_shell/pipeline/: bad_1.test  bad_2.test  basic_1.test  concat_files.test  file1.txt  file2.txt  hard_1.test  hard_2.test  inverse.test  sorting.test  word_count.test
tests/test_shell/redirection/: bad_append_1.test  bad_append_2.test  cov.test  error_missing_file.test  file.text  ls.test  redir_pipe.test  redir_plus_cat.test  redir_stdout.test  simple.test  (+11 more)
(+41 files in other folders)
